# docs/swagger.yaml
@@ -230,6 +230,12 @@ components:
         SealID:
           type: integer
       type: object
+  securitySchemes:
+    bearer:
+      description: JWT authorization header. Use Bearer <token>.
+      in: header
+      name: Authorization
+      type: apiKey
 externalDocs:
   description: ""
   url: ""
@@ -279,6 +285,8 @@ paths:
               schema:
                 $ref: '#/components/schemas/gorouter.ErrorResponse'
           description: Internal Server Error
+      security:
+      - bearer: []
       summary: List inspections
       tags:
       - inspections
@@ -317,6 +325,8 @@ paths:
               schema:
                 $ref: '#/components/schemas/gorouter.ErrorResponse'
           description: Internal Server Error
+      security:
+      - bearer: []
       summary: Get inspection by ID
       tags:
       - inspections
@@ -364,6 +374,8 @@ paths:
               schema:
                 $ref: '#/components/schemas/gorouter.ErrorResponse'
           description: Internal Server Error
+      security:
+      - bearer: []
       summary: Finish inspection
       tags:
       - inspections
@@ -421,6 +433,8 @@ paths:
               schema:
                 $ref: '#/components/schemas/gorouter.ErrorResponse'
           description: Internal Server Error
+      security:
+      - bearer: []
       summary: Attach inspection photo
       tags:
       - inspections
@@ -465,6 +479,8 @@ paths:
               schema:
                 $ref: '#/components/schemas/gorouter.ErrorResponse'
           description: Internal Server Error
+      security:
+      - bearer: []
       summary: List brigade inspections
       tags:
       - inspections
